feat: remove resume, refactor replies
