# src/BricsSocial.Api/Controllers/ResumesController.cs
@@ -1,71 +1,0 @@
-﻿using BricsSocial.Api.Swagger;
-using BricsSocial.Application.Common.Models;
-using BricsSocial.Application.Resumes.Common;
-using BricsSocial.Application.Resumes.CreateResume;
-using BricsSocial.Application.Resumes.DeleteResume;
-using BricsSocial.Application.Resumes.GetResume;
-using BricsSocial.Application.Resumes.GetResumes;
-using BricsSocial.Application.Resumes.UpdateResume;
-using Microsoft.AspNetCore.Mvc;
-
-namespace BricsSocial.Api.Controllers
-{
-    public class ResumesController : ApiControllerBase
-    {
-        [HttpGet("{id}")]
-        [ProducesResponseType(StatusCodes.Status200OK)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        [ProducesResponseType(StatusCodes.Status404NotFound)]
-        [ProducesResponseType(StatusCodes.Status500InternalServerError)]
-        public async Task<ActionResult<ResumeDto>> Get(int id, CancellationToken cancellationToken)
-        {
-            return Ok(await Mediator.Send(new GetResumeQuery { Id = id }, cancellationToken));
-        }
-
-        [HttpGet]
-        [ProducesResponseType(StatusCodes.Status200OK)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        [ProducesResponseType(StatusCodes.Status500InternalServerError)]
-        public async Task<ActionResult<PaginatedList<ResumeDto>>> Get([FromQuery] GetResumesQuery request, CancellationToken cancellationToken)
-        {
-            return Ok(await Mediator.Send(request, cancellationToken));
-        }
-
-        [HttpPost]
-        [ProducesResponseType(StatusCodes.Status201Created)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        [ProducesResponseType(StatusCodes.Status500InternalServerError)]
-        public async Task<ActionResult<ResumeDto>> Create(CreateResumeCommand command, CancellationToken cancellationToken)
-        {
-            return StatusCode(StatusCodes.Status201Created, await Mediator.Send(command, cancellationToken));
-        }
-
-        [HttpPut("{id}")]
-        [ProducesResponseType(StatusCodes.Status200OK)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        [ProducesResponseType(StatusCodes.Status403Forbidden)]
-        [ProducesResponseType(StatusCodes.Status404NotFound)]
-        [ProducesResponseType(StatusCodes.Status500InternalServerError)]
-        public async Task<ActionResult<ResumeDto>> Update(int id, UpdateResumeCommand request, CancellationToken cancellationToken)
-        {
-            if (id != request.Id)
-                return BadRequest();
-
-            return Ok(await Mediator.Send(request, cancellationToken));
-        }
-
-        [HttpDelete("{id}")]
-        [ProducesResponseType(StatusCodes.Status204NoContent)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        [ProducesResponseType(StatusCodes.Status403Forbidden)]
-        [ProducesResponseType(StatusCodes.Status404NotFound)]
-        [ProducesResponseType(StatusCodes.Status500InternalServerError)]
-        [RequestType(typeof(DeleteResumeCommand))]
-        public async Task<IActionResult> Delete(int id, CancellationToken cancellationToken)
-        {
-            await Mediator.Send(new DeleteResumeCommand { Id = id }, cancellationToken);
-
-            return NoContent();
-        }
-    }
-}
