# src/BricsSocial.Domain/Enums/ReplyType.cs
@@ -1,0 +1,14 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace BricsSocial.Domain.Enums
+{
+    public enum ReplyType
+    {
+        Specialist = 0,
+        Vacancy = 1
+    }
+}
