# src/BricsSocial.Infrastructure/Persistence/ApplicationDbContext.cs
@@ -14,12 +14,7 @@ namespace BricsSocial.Infrastructure.Persistence
         public DbSet<Agent> Agents => Set<Agent>();
         public DbSet<Company> Companies => Set<Company>();
         public DbSet<Vacancy> Vacancies => Set<Vacancy>();
-        public DbSet<VacancyReply> VacancyReplies => Set<VacancyReply>();
-        public DbSet<VacancyReplyFeedback> VacancyReplyFeedbacks => Set<VacancyReplyFeedback>();
-        public DbSet<Resume> Resumes => Set<Resume>();
-        public DbSet<ResumeReply> ResumeReplies => Set<ResumeReply>();
-        public DbSet<ResumeReplyFeedback> ResumeReplyFeedbacks => Set<ResumeReplyFeedback>();
-        public DbSet<FriendRequest> FriendRequests => Set<FriendRequest>();
+        public DbSet<Reply> Replies => Set<Reply>();
 
         public DbSet<SkillTag> SkillTags => Set<SkillTag>();
 
